2010-04-16  Karel Klíč  <kklic@redhat.com>

	* src/libwikt/languages.c: Delete trailing whitespace.
	Fix indentation.

	* src/app/optionsdialog.cpp (OptionsDialog): Rewrite the language
	list creation code to support non-ASCII letters and variable number
	of first letters.
	Fix indentation.

	* .dir-locals.el: New file; contains global Emacs settings
	for Wikt.

	* po/POTFILES.in: New file; start with one testing file.

	* po/LINGUAS: New file; start with Czech localization only.

	* po/Makevars: New file with gettext configuration.

	* README: New section Git Repository.

	* src/libwikt/languages.h: Prefer term ASCII/UTF-8 "encoding"
	over "format".
	Make languages structure available for applications.
	Delete trailing whitespace.
	Delete emacs custom settings.

2010-03-16  Karel Klíč  <kklic@redhat.com>

	* src/libwikt/urlutils.cpp (toUrl): Use 'x' as the escape character.
	Many more characters are now escaped.
	Use QUrl::setUrl to create the URL.

	* src/libwikt/urlutils.cpp (fileNameToMimeType): Error debugging
	output contains file name.

	* src/libwikt/tree/linktargetnode.cpp (LinkTargetNode): Formatting.
	(toXHtmlLink): Added explanatory comment.